--- a/ex02/Makefile
+++ b/ex02/Makefile
@@ -2,16 +2,16 @@ CC	=	c++
 
 CFLAGS	=	-Wall -Wextra -Werror -std=c++98
 
-SRC		=	ClapTrap.cpp \
-			ScavTrap.cpp \
-			FragTrap.cpp \
+SRC		=	class/ClapTrap.cpp \
+			class/ScavTrap.cpp \
+			class/FragTrap.cpp \
 			main.cpp \
 
 OBJ		=	$(addprefix obj/, $(SRC:.cpp=.o))
 
 OBJ_DIR	=	$(sort $(dir $(OBJ)))
 
-HEADER	=	
+HEADER	=	-Iclass
 
 NAME	=	FragTrap
 
